--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
+    "lint": "eslint .",
+    "format": "prettier --write .",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -16,6 +18,13 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@eslint/js": "^9.25.1",
+    "eslint": "^9.25.1",
+    "fast-check": "^4.1.1",
+    "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3",
+    "supertest": "^7.1.0"
   }
 }
